# Backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
.github/workflows/: package.yaml  publish.yaml  rust.yml
src/: index.ts  main.rs  piped.rs  piped.ts  types.rs  utils.rs
src/routes/: download.rs  download.ts  index.rs  instance.rs  mod.rs  search.rs  search.ts  searchSpotify.ts  search_spotify.rs  stream.rs  stream.ts  thumbnail.rs  thumbnail.ts
src/types/: types.ts
