[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"

reqwest = { version = "0.12.7", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
chrono = "0.4.20-rc.1"
colored = "2.1.0"
env_logger = "0.11.5"