[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"

anyhow = "1"
chrono = "0.4.20-rc.1"
colored = "2.1.0"
env_logger = "0.11.5"
futures = "0.3"
futures-util = "0.3.30"
log = "0.4"
reqwest = { version = "0.12.7", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tokio-stream = "0.1.16"
bytes = "1.7.1"
tempfile = "3.12.0"