[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"

anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4"
reqwest = { version = "0.12.9", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tokio-stream = "0.1.16"
bytes = "1.8.0"
tempfile = "3.14.0"
image = "0.25.5"
async-stream = "0.3.6"
regex = "1.11.1"
urlencoding = "2.1.3"
base64 = "0.22.1"
md5 = "0.7.0"
kdam = { version = "0.6.0", features = ["rich", "spinner"] }

rustypipe = "0.7.0"
rustypipe-downloader = { version = "0.2.4", features = ["audiotag"] }
